[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemies/Turret.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Turret" type="KinematicBody2D"]
script = ExtResource( 1 )
detect_radius = 200

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Visibility" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]

[node name="Shoottimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="timeout" from="Shoottimer" to="." method="_on_Shoottimer_timeout"]
